# ChemCache

./: .buildinfo  .gitignore  .licenserc.yaml  CMakeLists.txt  README.md  design.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
.github/: .licenserc.yaml
.github/Dockerfile/: note.txt
.github/actions/container-build_test_release/: action.yaml  entrypoint.sh
.github/workflows/: build_base.yaml  build_test_release-manual.yaml  build_test_release.yaml  c-cpp.yaml  deploy_docs.yaml  download_and_generate_data.yaml  merge.yaml  pull_request.yaml
.github/workflows/scripts/: build_and_test.sh  download_reference_data.sh  generate_reference_data.sh
_sources/: index.rst.txt  installation.rst.txt
_sources/module_api/: Atom.rst.txt  Atom_Isotope.rst.txt  NWX_Molecules.rst.txt  Straight_Chain_Alkane.rst.txt  Symbol_from_Z.rst.txt  Z_from_Symbol.rst.txt  index.rst.txt  sto-3g.rst.txt  sto-3g_SAD_density.rst.txt  sto-3g_atomic_basis.rst.txt  sto-3g_atomic_density_matrix.rst.txt
_sources/python_api/: generate_atomicinfo.rst.txt  generate_basis.rst.txt  generate_densities.rst.txt  generate_molecules.rst.txt  helper_fxns.rst.txt  index.rst.txt  modules.rst.txt  reference_data.rst.txt  scrape_bse.rst.txt
autoapi/data_management/: index.html
chemcache_cxx_api/: atoms_8hpp_source.html  bases_2sto__dash__3g_2sto__dash__3g_8hpp_source.html  bases_8hpp_source.html  chemcache_8hpp.html  chemcache_8hpp__incl.map  chemcache_8hpp__incl.md5  chemcache_8hpp_source.html  chemcache__mm_8hpp_source.html  density_2sto__dash__3g_2sto__dash__3g_8hpp_source.html  density_8hpp_source.html  dir_000007_000000.html  dir_000008_000000.html  dir_000008_000006.html  dir_000009_000000.html  dir_000011_000000.html  dir_11f602d4b515a21ea0357b473be91e52.html  dir_11f602d4b515a21ea0357b473be91e52_dep.map  dir_11f602d4b515a21ea0357b473be91e52_dep.md5  dir_34c2ada6848f39a793a5497f8054991c.html  dir_34c2ada6848f39a793a5497f8054991c_dep.map  dir_34c2ada6848f39a793a5497f8054991c_dep.md5  dir_40c8673922c0916d3852bcfb683a9859.html  dir_40c8673922c0916d3852bcfb683a9859_dep.map  dir_40c8673922c0916d3852bcfb683a9859_dep.md5  dir_4b89d5c5ca58a72c7c6fb7ff137bd9b5.html  dir_4b89d5c5ca58a72c7c6fb7ff137bd9b5_dep.map  dir_4b89d5c5ca58a72c7c6fb7ff137bd9b5_dep.md5  dir_5c0d64f70903e893b1efe571a4b8de29.html  dir_5c0d64f70903e893b1efe571a4b8de29_dep.map  dir_5c0d64f70903e893b1efe571a4b8de29_dep.md5  dir_6467658e825f7d3794d6991e544adeb8.html  dir_6467658e825f7d3794d6991e544adeb8_dep.map  dir_6467658e825f7d3794d6991e544adeb8_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7fdd6e2d64e2b4e22b1d61f19faa61d9.html  dir_7fdd6e2d64e2b4e22b1d61f19faa61d9_dep.map  dir_7fdd6e2d64e2b4e22b1d61f19faa61d9_dep.md5  dir_a6d3de8b1176249c5bcc1f5486a5003a.html  (+19 more)
chemcache_cxx_api/search/: all_0.js  all_1.js  all_2.js  files_0.js  functions_0.js  functions_1.js  namespaces_0.js  searchdata.js
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  design.rst  index.rst  installation.rst  nitpick_exceptions
docs/source/python_api/: index.rst
experimental/include/: chemcache_experimental.hpp  chemcache_experimental_mm.hpp
include/chemcache/: chemcache.hpp  chemcache_mm.hpp
module_api/: Atom.html  Atom_Isotope.html  Elec_Config_from_Z.html  NWX_Molecules.html  Straight_Chain_Alkane.html  Symbol_from_Z.html  Z_from_Symbol.html  index.html  sto-3g.html  sto-3g_SAD_density.html  sto-3g_atomic_basis.html  sto-3g_atomic_density_matrix.html  sto-3g_atomic_dm.html
molecules/: he2.xyz  he4.xyz  he6.xyz  he8.xyz
physical_data/: format_nistmult.py
python_api/: generate_atomicinfo.html  generate_basis.html  generate_densities.html  generate_molecules.html  helper_fxns.html  index.html  modules.html  reference_data.html  scrape_bse.html
python_api/reference_data/: index.html  reference_data.generate_atomicinfo.html  reference_data.generate_basis.html  reference_data.generate_densities.html  reference_data.generate_elec_configs.html  reference_data.generate_molecules.html  reference_data.generate_ptable_atomdm.html  reference_data.generate_ptable_configs.html  reference_data.helper_fxns.html  reference_data.scrape_bse.html
reference_data/: README.md  __init__.py  generate_atomconfigs.py  generate_atomicinfo.py  generate_basis.py  generate_densities.py  generate_elec_configs.py  generate_molecules.py  generate_mols.py  generate_ptable_atomdm.py  generate_ptable_configs.py  helper_fxns.py  scrape_bse.py
reference_data/basis_sets/: 3-21g.nw  4-31g.nw  5-21g.nw  6-21g.nw  6-31++g.nw  6-31++g_star.nw  6-31++g_star_star.nw  6-31+g.nw  6-31+g_star.nw  6-31+g_star_star.nw  6-311++g(2d,2p).nw  6-311++g(3df,3pd).nw  6-311++g.nw  6-311++g_star.nw  6-311++g_star_star.nw  6-311+g(2d,p).nw  6-311+g.nw  6-311+g_star.nw  6-311+g_star_star.nw  6-311g(2df,2pd).nw  6-311g(d,p).nw  6-311g.nw  6-311g_star.nw  6-311g_star_star.nw  6-31g(2df,p).nw  6-31g(3df,3pd).nw  6-31g(d,p).nw  6-31g.nw  6-31g_star.nw  6-31g_star_star.nw  ahlrichs_pvdz.nw  ahlrichs_tzv.nw  ahlrichs_vdz.nw  ahlrichs_vtz.nw  aug-cc-pcv5z.nw  aug-cc-pcvdz.nw  aug-cc-pcvqz.nw  aug-cc-pcvtz.nw  aug-cc-pv(5+d)z.nw  aug-cc-pv(d+d)z.nw  (+143 more)
reference_data/physical_data/: ATOMCONFIGS-HF.txt  ATOMCONFIGS-HFS.txt  CIAAW-ABUNDANCE.txt  CIAAW-ISOTOPEMASSES.txt  CIAAW-MASSES.txt  CovRadii.txt  NIST-ATOMCONFIGS.txt  NIST-ATOMICION.formatted.txt  NIST-ATOMICION.txt  VanDerWaalRadius.txt  format_atomconfig.py  format_nistmult.txt
src/chemcache/: basis_set_list.hpp  chemcache.cpp  chemcache_mm.cpp  load_atom_dm.cpp  load_basis_sets.cpp  load_elec_configs.cpp  load_elements.cpp  load_molecules.cpp  nwx_atomic_densities.cpp  nwx_atomic_densities.hpp
src/python/: export_chemcache.cpp
tests/: __init__.py
tests/chemcache/: chemcache.cpp  test_main.cpp
utils/data_management/: README.md  __init__.py  generate_atomicinfo.py  generate_basis.py  generate_densities.py  generate_elec_configs.py  generate_molecules.py  helper_fxns.py  scrape_bse.py
(+2751 files in other folders)
